<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.ufjf.dcc196.trb3.selfmanagement.MainActivity">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/action_edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/action_remove"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_tags"
        android:icon="@drawable/ic_assignment_white_24dp"
        android:title="@string/action_tasks"
        app:showAsAction="ifRoom" />
</menu>
