<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overflows"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufjf.dcc196.trb3.selfmanagement.AddEditTask">

    <TextView
        android:id="@+id/txtTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_task_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTaskText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskTitle" />

    <TextView
        android:id="@+id/txtTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_task_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barTaskDifficulty" />

    <EditText
        android:id="@+id/edtTaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskDescription" />

    <TextView
        android:id="@+id/txtTaskState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_task_difficulty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskText" />

    <SeekBar
        android:id="@+id/barTaskDifficulty"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="215dp"
        android:layout_height="37dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:max="5"
        android:progress="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskState" />

    <TextView
        android:id="@+id/txtTaskTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_task_tags"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnTaskState"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnTaskConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="14dp"
        android:text="@string/dialog_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lstCheckTags" />

    <Button
        android:id="@+id/btnTaskCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/dialog_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnTaskConfirm"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lstCheckTags" />

    <ListView
        android:id="@+id/lstCheckTags"
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:visibility="visible"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTaskTags"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/edtTaskState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_task_state"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskDescription"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/spnTaskState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="40dp"
        android:minWidth="215dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTaskState" />

</android.support.constraint.ConstraintLayout>
